[metadata]
name = ok-esputnik
version = 0.2
description = Simple E-Sputnik REST client library for Python.
long_description = file: README.rst
author = Oleg Kleschunov
author_email = igorkleschunov@gmail.com
url = https://github.com/LowerDeez/ok-esputnik
home-page = https://github.com/LowerDeez/ok-esputnik
keywords = python, esputnik
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    trafaret

[isort]
known_first_party = esputnik
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations
